增加参数校验
